add functionality of pictures

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 server.port=8080
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.datasource.url= jdbc:postgresql://localhost:5432/store_db
+spring.datasource.username= postgres
+spring.datasource.password=plavalaguna
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
