--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,8 +18,8 @@
 server.port=8080
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 spring.datasource.url= jdbc:postgresql://localhost:5432/store_db
-spring.datasource.username=store_admin
-spring.datasource.password=qwerty
+spring.datasource.username=postgres
+spring.datasource.password=plavalaguna
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
