--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,10 +18,10 @@
 server.port=8080
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 spring.datasource.url= jdbc:postgresql://localhost:5432/store_db
-spring.datasource.username=store_admin
-spring.datasource.password=qwerty
-spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
